--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Parallelism by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Parallelism by HTML5 UP</title>
+		<title>郑晓丽&郑文杰新婚快乐</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,9 +22,8 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>Parallelism</h1>
-								<p>A responsive portfolio site<br />
-								template by HTML5 UP</p>
+								<h1>恭贺新婚</h1>
+								<p>祝你们俩白头偕老，永结同心<br/>BEST WISHES FOR YOU</p>
 							</div>
 						</div>
 
