--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="left">
 				</div>
 				<div class="right">
-						<li>Design: <a href="http://html5up.net">sai unnhi</a></li>
+						<li>Design BY sai unnhi</a></li>
 					</ul>
 				</div>
 			</div>
