--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
 								<h1>恭贺新婚</h1>
-								<p>祝你们俩白头偕老，永结同心<br/>BEST WISHES FOR YOU</p>
+								<h2>2018年5月1日</h2>
+								<p>祝你们白头偕老，永结同心<br/>BEST WISHES FOR YOU</p>
 							</div>
 						</div>
 
